--- a/src/App.css
+++ b/src/App.css
@@ -5,3 +5,14 @@ body {
     font-family: Sans-Serif;
     text-align: center;
 }
+
+.settle-button-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px;
+    image {
+        width: 50px;
+        height: 50px;
+    }
+}  
